--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     </properties>
 
     <build>
+        <finalName>EZTpa</finalName>
         <defaultGoal>clean package</defaultGoal>
         <plugins>
             <plugin>
